--- a/index.html
+++ b/index.html
@@ -5,5 +5,12 @@
 </head>
 <body>
 <h1>Hello! It's My Future Blog!</h1>
+<ul>
+<li>главная</li>
+<li>галерея</li>
+<li>архив</li>
+<li>контакты</li>
+</ul>
+<footer>MyFutureBlog &copy;</footer>
 </body>
 </html>
