--- a/index.html
+++ b/index.html
@@ -1,16 +1,151 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
-<head>
-<title>My Future Blog</title>
-</head>
-<body>
-<h1>Hello! It's My Future Blog!</h1>
-<ul>
-<li>главная</li>
-<li>галерея</li>
-<li>архив</li>
-<li>контакты</li>
-</ul>
-<footer>MyFutureBlog &copy;</footer>
-</body>
+	<head>
+		<meta charset="UTF-8"/>
+		<title>PREZENTARE</title>
+		<link href="main.css" rel="stylesheet" type="text/css"/>
+    <style>body{
+	background: #000000;
+	margin: 0%;
+}
+.brand_logo{
+	padding-left: 50px;
+}
+.trusted_logo{
+	padding-right: 50px;
+}
+h1{
+	text-align: center;
+	color: #FFFFFF;
+	font-size: 50px;
+	font-family: "Helvetica";
+}
+.block1{
+	background-color: #1a1a1a;
+	padding-left: 0px;
+	margin-left: 0px;
+}
+.block1text{
+	color: #FFFFFF;
+	font-family: "Helvetica";
+	padding-left: 30px;
+	padding-right: 30px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	font-size: 20px;
+	text-align: center;
+	margin: 0%;
+}
+#blocks2{
+	color: #FFFFFF;
+	overflow: hidden; 
+	font-size: 17px;
+	margin-bottom: 20px;
+	font-family: "Helvetica";
+}
+
+iframe{
+ 	display: inline;
+	margin-left: auto;
+    margin-right: auto;
+}
+.iframe1{
+	padding-right: 10%;
+}
+
+.block2list{
+margin-left: 4%;
+float: left;
+background-color: rgba(100,100,100,0.3); 
+width: 30%;
+text-align: center;
+padding-top: 30px;
+padding-bottom: 35px;
+margin-right: 1%;
+}
+.block2list:hover{
+	color: #FFFFFF;
+	font-size: 20px;
+	border-bottom: 5px solid #FFFFFF;
+	transition: 2s;
+	background-color: rgba(100,100,100,0.05);
+}
+.block3list{
+float: left;
+background-color: rgba(100,100,100,0.3); 
+width: 30%;
+padding-top: 30px;
+padding-bottom: 35px;
+}
+.block3list:hover{
+	color: #FFFFFF;
+	font-size: 20px;
+	border-bottom: 5px solid #FFFFFF;
+	transition: 2s;
+	background-color: rgba(100,100,100,0.05);
+}
+.block4list{
+	float: left;
+	background-color: rgba(100,100,100,0.3); 
+	width: 30%;
+	padding-top: 30px;
+	padding-bottom: 35px;
+	margin-right: 4%;
+	margin-left: 1%;
+}
+.block4list:hover{
+	color: #FFFFFF;
+	font-size: 20px;
+	border-bottom: 5px solid #FFFFFF;
+	transition: 2s;
+	background-color: rgba(100,100,100,0.05);
+}
+a{
+text-decoration: none;
+}</style>
+	</head>
+	<body align="center">
+		<div class="brand_logo">
+			<img src="D:\FILES\Prezentarea Vicu\logo-brand-white-e1434519467251.png" align="left">
+		</div>
+		<div class="trusted_logo">
+			<img src="D:\FILES\Prezentarea Vicu\Street-view-trusted-logo-new-grey.png" align="right" width="15%">
+		</div>
+		<div id="">
+		<h1>Ce este STREET VIEW TRUSTED?</h1>
+		<div class="block1">
+			<p class="block1text">Google duce conceptul Street View mai departe și inițiază și în România un nou proiect spre a expune interiorul afacerii dumneavoastră <br> lumii întregi prin intermediul unui <span style="color: #80bfff;"><b>tur de realitate virtuală.</b></span> </p>
+			<p class="block1text">Propagat în întreaga comunitate Google, în special folosindu-se de Maps și Street View, servicii din ce în ce mai folosite pentru căutari locale în zilele noastre, acesta devine cel mai practic instrument de marketing și de difuzare on-line.</p>
+			</div>
+			<div style="display: block;" align="center">
+			<iframe class="iframe1" src="https://www.google.com/maps/embed?pb=!1m0!4v1506959774451!6m8!1m7!1sCAoSLEFGMVFpcE1Ga3F6UGhjQjAxS1ZPcVpBQ0p5cHl3dVRnX1VSblhUU0tIOXJH!2m2!1d47.01664517151927!2d28.82698333678798!3f102.39261906404904!4f1.0645289260284159!5f0.7820865974627469" width="40%" height="500" frameborder="0" style="border:0" style="padding-top: 0px;"> </iframe>
+			<iframe class="iframe2" src="https://www.google.com/maps/embed?pb=!1m0!4v1506975370138!6m8!1m7!1sCAoSLEFGMVFpcFB4emtILWNWc2piYWNVSGJIMC1XZWVlTVBuWlVQVVFHYkk5Q05l!2m2!1d45.49289062727!2d28.03442701313509!3f322!4f0!5f0.7820865974627469" width="40%" height="500" frameborder="0" style="border:0" ></iframe>
+			</div>
+		
+		
+		<h1>De ce STREET VIEW TRUSTED?</h1>
+		<div id="blocks2" align="ceneter">
+					<div class="block2list" align="center" href="#">
+					<b style="font-size: 25px;">Dezvoltă imaginea</b>
+						<ul>
+						<li>Aduce transparența și prestanța;</li>
+						<li>Stimulează vizual în rezultatele căutarilor;</li>
+						<li>Atrage notorietate și inspiră încredere.</li></ul>
+					</div>
+					<div class="block3list" align="center">
+					<b style="font-size: 25px;">Generează vizibilitate</b>
+						<ul><li>Listat în toate platformele Google de căutare;</li>
+						<li>Îmbunatățește poziționarea profilului în căutări;</li>
+						<li>Accesibil de pe PC sau orice dispozitiv smart;</li></ul>
+					</div>
+					<div class="block4list" align="center">
+					<b style="font-size: 25px;">Crește productivitatea</b>
+						<ul><li>Simplu, rapid și ușor de implementat;</li>
+						<li>Eficientizează fluxul de informare;</li>
+						<li>Optimizează și sporește conversia.</li></ul>
+					</div>
+		</div>
+</div>
+
+	</body>
 </html>
